# natsume-simple

./: .envrc  .gitignore  CHANGELOG.md  Pipfile  README.md  biome.json  devenv.nix  devenv.yaml  environment.yml  flake.nix  pyproject.toml  requirements-apple-silicon.txt  requirements-colab.txt  requirements-cuda.txt  requirements-electra.txt  requirements.txt  server.py  shell.nix
.devcontainer/: Dockerfile  devcontainer-rootless.json  devcontainer.json
.devcontainer/rootless/: devcontainer.json
.github/workflows/: ci.yaml
data/: jnlp_npvs_ja_ginza.csv  jnlp_npvs_ja_ginza_bert_large.csv  jnlp_npvs_ja_ginza_electra.csv  ted_corpus.txt  ted_npvs.csv  ted_npvs_ja_ginza.csv  ted_npvs_ja_ginza_bert_large.csv  ted_npvs_ja_ginza_electra.csv
natsume-frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
natsume-frontend/src/: app.d.ts
natsume-frontend/src/lib/: CollocationList.svelte  Loading.svelte  Search.svelte  query.ts  theme.svelte.ts
natsume-frontend/src/lib/components/: CollocationList.svelte  HorizontallyScrollableContainer.svelte  Search.svelte  ThemeSwitch.svelte
natsume-frontend/src/lib/components/menus/: Options.svelte  Stats.svelte
natsume-frontend/src/routes/: +page.svelte
notebooks/: pattern-extraction.ipynb  pattern_extraction_colab.ipynb  visualization.ipynb
scripts/: convert-jnlp-corpus.py  convert-jnlp-corpus.sh  get-jnlp-corpus.py  get-jnlp-corpus.sh
src/natsume_simple/: data.py  log.py  pattern-extraction.py  pattern_extraction.py  server.py  utils.py
static/: app.js  index.html
svelte-frontend/src/: App.svelte
tests/: test_models.py
