[project]
name = "natsume-simple"
version = "0.2.0"
description = "simple dependency relation search engine for Japanese"
authors = [{ name = "Bor Hodošček", email = "dev@bor.space" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda12x>=13.3.0",
    "datasets>=3.0.1",
    "fastapi>=0.115.0",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    # blocked on thinc (spaCy):
    "numpy>=1.24.3,<2.0.0",
    "polars>=1.9.0",
    "spacy>=3.7.5",
    # "spacy-transformers>=1.2.5",
    "torch>=2.4.1",
    "uvicorn>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest-testmon>=2.1.1",
    "pytest-watch>=4.2.0",
    "pytest>=8.3.3",
]

# TODO
# https://docs.astral.sh/uv/configuration/indexes/
# [tool.uv.sources]
# torch = [
#   { index = "cpu", markers = "sys_platform == 'darwin'" },
#   { index = "gpu", markers = "sys_platform != 'darwin'" },
# ]
#
# [[tool.uv.index]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu124"
# default = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests", "integration"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/natsume_simple"]
